# rag

./: .env.example  .gitignore  README.md  all_curl_requests.fish  api_test_response.json  api_test_results_20250808_020832.csv  api_test_results_20250808_020832.json  api_test_results_20250808_020832_comparison.txt  create_docling_vector_db.py  docker-build.sh  docker-compose.yml  docling_detailed_parser.py  mullm.py  paddle_gpu_check.py  paddle_test.py  pyproject.toml  rapid_gpu_check.py  requirements.txt  run.py  test.py  test_api_format.py  test_easyocr.py  test_it.py  test_rate_limits.py  usage_tracking2.json
app/: main.py
app/api/: routes.py
app/core/: config.py  directories.py  security.py
app/models/: clause.py  requests.py
app/services/: adaptive_segmentation.py  answer_generator.py  cache_manager.py  challenge_detector.py  challenge_solver.py  clause_classifier.py  clause_extractor.py  clause_segmentation.py  copilot_provider.py  direct_processor.py  document_processor.py  document_service.py  document_storage.py  document_type_detector.py  embedding_manager.py  enhanced_answer_generator.py  enhanced_document_service.py  file_manager.py  gemini_embeddings.py  llm_challenge_solver.py  query_transformer.py  question_logger.py  rag_coordinator.py  segmentation_strategies.py  table_extractor.py  text_chunker.py  text_patterns.py  universal_llm_solver.py  universal_web_client.py  vector_store.py  web_client.py
app/services/extractors/: pdf_extractor.py  (+6 more)
clauses/: from_url.json
documents/doc_20250801_101804_042f627c/: metadata.json
documents/doc_20250801_103623_042f627c/: metadata.json
uploads/: XXXNEW_pro_Europe_Warsaw_78f29a5b-b63e-4d18-85d2-caa6d24fcdfe_20250801_002902.json
(+7 files in other folders)
