[project]
name = "bajaj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.12.15",
    "en-core-web-sm",
    "fastapi>=0.116.1",
    "pillow>=10.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "pymupdf4llm>=0.0.5",
    "pytesseract>=0.3.10",
    "python-multipart>=0.0.20",
    "spacy>=3.8.7",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
