[project]
name = "bajaj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "uvicorn[standard]>=0.35.0",
    "flagembedding>=1.2.11",
    "tiktoken>=0.8.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "google-generativeai>=0.8.0",
    "httpx>=0.28.1",
    "pytesseract>=0.3.13",
]
